# speckit-plus

AI-todo/: .dockerignore  .gitignore  NOTIFICATION_BUG_ANALYSIS.md  NOTIFICATION_ENDPOINTS_COMPLETE.md  PHASE_V_ANALYSIS_REPORT.md  README.md  db-init-job.yaml  db-migrate-job.yaml  init_db_script.py  nginx.conf  pyproject.toml  tasks.json
AI-todo/.claude/commands/: sp.constitution.md  sp.specify.md
AI-todo/.github/workflows/: README.md  phase5-ci-cd.yml
AI-todo/.specify/memory/: constitution.md
AI-todo/history/adr/: ADR-001-authentication-security-stack.md  ADR-002-multi-agent-orchestration-architecture.md  ADR-003-mcp-tool-layer.md  ADR-004-realtime-communication-strategy.md  ADR-005-session-memory-architecture.md
AI-todo/phase-1/: tasks.json
AI-todo/phase-1/src/: main.py
AI-todo/phase-4/docker/: .dockerignore  backend.Dockerfile  docker-entrypoint.sh  entrypoint.sh  frontend.Dockerfile  nginx.conf
AI-todo/phase-4/scripts/: build-images.sh  cleanup.sh  deploy-minikube.sh
AI-todo/phase-5/: .dockerignore  .env.example  BACKEND_TESTING_REPORT.md  CHATBOT_ERROR_ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_PLAN.md  PHASE_V_COMPLETION_SUMMARY.md  PHASE_V_IMPLEMENTATION_STATUS.md  PROFILE_PAGE_FIX.md  README.md  docker-compose.simple.yml  docker-compose.yml  fix_chat_instructions.md  minimal_dockerfile  minimal_requirements.txt  requirements.txt
AI-todo/phase-5/dapr-components/: README.md  kafka-pubsub.yaml  reminder-cron.yaml  secrets.yaml  statestore.yaml
AI-todo/phase-5/docker/: Dockerfile.audit  Dockerfile.frontend  Dockerfile.notification  Dockerfile.recurring  README.md  run_audit.sh  run_notification.sh  run_recurring.sh
AI-todo/phase-5/frontend/: .gitignore  package-lock.json  tailwind.config.ts
(+822 files in other folders)
